@@ -1,5 +1,7 @@
 == master
 
+* Highlight final states in GraphViz drawings
+
 == 0.6.2 / 2009-03-08
 
 * Make it easier to override generated instance / class methods
